# just-enough-python-for-datasci-course

./: .gitignore  LICENSE  README.md  requirements.piptools  requirements.txt
code/02-python-lang/: show_first_chars.py  speedtest.py  test_python.py
code/03-clean-code/: magic.py
code/04-functions/: Life.ipynb  fibonacci3s.py  generators.py  life_better_no_func.py  life_functions.py
code/05-organizing-and-reusing-code/: math_research.ipynb
code/05-organizing-and-reusing-code/mathfib/: README.md  pyproject.toml  setup.py
code/05-organizing-and-reusing-code/mathfib/mathfib/: __init__.py
code/07-debugging/: math_research.ipynb
code/08-reproducibility/: compose.yaml
code/08-reproducibility/linux_math_base/: Dockerfile
code/08-reproducibility/math_research/: Dockerfile
code/08-reproducibility/math_research/src/: math-research.ipynb  mathf.py  requirements.piptools  requirements.txt
code/08-reproducibility/math_research/src/config/: jupyter_server_config.py
code/09-agentic-ai/game-sales-analysis/: __init__.py  data-summary.md  data.md  data_analysis.py  data_loader.py  game-sales-research.ipynb  utils.py
code/09-agentic-ai/math-research/: math_research.ipynb  mathf.py  test_mathf.py
