[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathfib"
version = "0.1.0"
description = "A package providing Fibonacci sequence and mathematical filtering utilities"
readme = "README.md"
authors = [
    {name = "Python Data Science Course", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"

[project.urls]
"Homepage" = "https://github.com/yourusername/mathfib"
"Bug Tracker" = "https://github.com/yourusername/mathfib/issues"